--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car game </title>
+    <link rel="shortcut icon" href="myimage1.png" type="image/x-icon">
+    <title> Car game </title>
     <style>
         *{
             box-sizing: border-box;
@@ -19,7 +20,7 @@
             background-color: red;
             position: absolute;
             bottom: 120px;
-            background-image: url(c4.jpg);
+            background-image: url(./c4.jpg);
             background-size: cover;
         }
         .GameArea{
@@ -50,7 +51,7 @@
             position: absolute;
             background-color: blue;
             bottom: 120px;
-            background-image: url(c3.jpg);
+            background-image: url(./c3.jpg);
             background-size: cover;
         }
         .Score{
@@ -242,6 +243,16 @@
         }
         
     </script>
+    
+   <footer>
+        <p style="text-align:center; background-color:pink">&#x3c; &#47; &#x3e; with ❤️ by 
+          <a href="https://darshan-star.github.io/my-portfolio/">Darshan Yadav</a>
+          <br> 
+          <a href="https://www.linkedin.com/in/darshan-yadav-9496b0201/"_blank">Join on LinkedIn
+          </a>
+        </p>
+    </footer>
+
 </body>
 </html>
 
