--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             background-color: red;
             position: absolute;
             bottom: 120px;
-            image: url(c4.jpg);
+            background-image: url(./images/c4.jpg);
             background-size: cover;
         }
         .GameArea{
