--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             position: absolute;
             background-color: blue;
             bottom: 120px;
-            background-image: src="c3.jpg";
+            background-image: src="./images/c3.jpg";
             background-size: cover;
         }
         .Score{
