--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             background-color: red;
             position: absolute;
             bottom: 120px;
-            background: url(c4.jpg);
+            background-image: url(C4.jpg);
             background-size: cover;
         }
         .GameArea{
@@ -51,7 +51,7 @@
             position: absolute;
             background-color: blue;
             bottom: 120px;
-            background: url(./images/c3.jpg);
+            background-image: url(./images/C3.jpg);
             background-size: cover;
         }
         .Score{
